[build-system]
requires = ["scikit-build-core>=0.10", "swig>=4.1"]
build-backend = "scikit_build_core.build"

[project]
name = "quantlib-moex"
version = "1.38.0.post0"
description = "QuantLib extensions for Moscow Exchange (MOEX)"
authors = [{ name = "Sergey Kostrukov", email = "sergey.dev@kostrukov.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["QuantLib==1.38.*"]

[project.optional-dependencies]
test = ["pytest>=6.0"]

[tool.scikit-build]
wheel.packages = ["src/qlmoex"]

[project.urls]
Homepage = "https://github.com/kostrse/quantlib-moex"
